fix(images): add scrollbars when an image is taller than the viewport
Related to CAM-4566

--- a/styles/_content.less
+++ b/styles/_content.less
@@ -452,6 +452,8 @@ pre.console {
 
   .content {
     max-width: 100%;
+    max-height: 100%;
+    overflow: auto;
     position: absolute;
     top: 50%;
     left: 50%;
